DiD S8,S9: Carry over units created via plague

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -443,18 +443,7 @@
 
     [event]
         name=victory
-
-        {MODIFY_UNIT (
-            side=1
-            {NOT_ON_RECALL_LIST}
-            [not]
-                id=Malin Keshar
-
-                [or]
-                    id=Darken Volk
-                [/or]
-            [/not]
-        ) variables.got_inside_manor yes}
+        {SET_GOT_INSIDE_MANOR}
     [/event]
 
     {HERODEATH_MALIN}
