--- a/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg
@@ -357,6 +357,13 @@
         [/endlevel]
     [/event]
 
+    # The player may have created new units using the plague ability. They
+    # should carry over to the next scenario.
+    [event]
+        name=victory
+        {SET_GOT_INSIDE_MANOR}
+    [/event]
+
     {HERODEATH_MALIN}
     {HERODEATH_VOLK_B}
 
