--- a/data/campaigns/Descent_Into_Darkness/utils/macros.cfg
+++ b/data/campaigns/Descent_Into_Darkness/utils/macros.cfg
@@ -246,3 +246,17 @@
         [/clear_variable]
     [/event]
 #enddef
+
+#define SET_GOT_INSIDE_MANOR
+        {MODIFY_UNIT (
+            side=1
+            {NOT_ON_RECALL_LIST}
+            [not]
+                id=Malin Keshar
+
+                [or]
+                    id=Darken Volk
+                [/or]
+            [/not]
+        ) variables.got_inside_manor yes}
+#enddef
