DiD S9: Clarify objectives

--- a/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg
@@ -108,7 +108,7 @@
             side=1
             [objective]
                 condition=win
-                description= _ "Find the book"
+                description= _ "Retrieve the book and escape"
             [/objective]
             [objective]
                 condition=lose
@@ -336,6 +336,48 @@
         [/unstore_unit]
 
         {CLEAR_VARIABLE stored_Darken,dest,darken_goto,index}
+    [/event]
+
+    [event]
+        # a side 1 unit finds the book
+        name=moveto
+        [filter]
+            side=1
+            canrecruit=no
+            x,y=11,7
+        [/filter]
+        [filter_condition]
+            [variable]
+                name=hasBook
+                equals=none
+            [/variable]
+        [/filter_condition]
+
+        [message]
+            x,y=11,7
+            message=_ "I have found the book, master! It is here."
+        [/message]
+
+        [if]
+            [have_unit]
+                x,y=11,7
+                race=undead
+            [/have_unit]
+            [then]
+                [message]
+                    id=Malin Keshar
+                    # po: The speaker addresses an undead minion.
+                    message=_ "Good! Guard it with your unlife while I come to fetch it."
+                [/message]
+            [/then]
+            [else]
+                # human or bat
+                [message]
+                    id=Malin Keshar
+                    message=_ "Good! Guard it with your life while I come to fetch it."
+                [/message]
+            [/else]
+        [/if]
     [/event]
 
     [event]
