TSG S1: fixed typo

--- a/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
@@ -771,7 +771,7 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Almost two months! I know not why, but one night, Sir Loris took several of our patrols along the Westin road and never returned. The very next night evening, these ruffians struck and killed eight of my men. We defended the citadel and held out, hoping for reinforcements, but they never came. Something must have happened in Westin, else Sir Loris would have relieved us by now."
+            message= _ "Almost two months! I know not why, but one night, Sir Loris took several of our patrols along the Westin road and never returned. The very next evening, these ruffians struck and killed eight of my men. We defended the citadel and held out, hoping for reinforcements, but they never came. Something must have happened in Westin, else Sir Loris would have relieved us by now."
         [/message]
 
         [message]
