TSG S2: fixed typo

--- a/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
@@ -489,7 +489,7 @@
                 [/message]
                 [message]
                     speaker=Deoran
-                    message= _ "Indeed, we have come to drive off these vile. Would you like to join us in our battle to restore peace to Westin?"
+                    message= _ "Indeed, we have come to drive off these vile brigands. Would you like to join us in our battle to restore peace to Westin?"
                 [/message]
                 [message]
                     speaker=Absu
