--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -534,50 +534,29 @@
             [/and]
         [/filter_condition]
 
-        [foreach]
-            array=unit.attack
-            [do]
-                [if]
-                    #This is to mute a warning message about retrieving a member of non-existant wml container.
-                    [variable]
-                        name=this_item.specials.length
-                        greater_than=0
-                    [/variable]
-
-                    [variable]
-                        name=this_item.specials.chance_to_hit.length
-                        greater_than=0
-                    [/variable]
-
-                    [then]
-                        [set_variables]
-                            name=this_item.specials.original_chance_to_hit
-                            to_variable=this_item.specials.chance_to_hit
-                        [/set_variables]
-
-                        {CLEAR_VARIABLE this_item.specials.chance_to_hit}
-                    [/then]
-                [/if]
-
-                [set_variables]
-                    name=this_item.specials.chance_to_hit
-
-                    [value]
-                        id=forced_cth
+        [object]
+			id=forced_cth
+			[filter]
+				{FILTER}
+			[/filter]
+			silent=yes
+			duration=turn end
+			take_only_once=no
+			[effect]
+				apply_to=new_ability
+				[abilities]
+					[chance_to_hit]
+						id=forced_cth
                         value={CTH_NUMBER}
                         cumulative=no
-                        [filter_opponent]
-                            {SECOND_FILTER}
-                        [/filter_opponent]
-                    [/value]
-                [/set_variables]
-            [/do]
-        [/foreach]
-
-        [unstore_unit]
-            variable=unit
-            find_vacant=no
-        [/unstore_unit]
+						affect_self=yes
+						[filter_opponent]
+							{SECOND_FILTER}
+						[/filter_opponent]
+					[/chance_to_hit]
+				[/abilities]
+			[/effect]
+	   [/object]
 
         [event]
             name=attack end
@@ -589,24 +568,10 @@
                 [/have_unit]
             [/filter_condition]
 
-            [foreach]
-                array=unit.attack
-                [do]
-                    {CLEAR_VARIABLE this_item.specials.chance_to_hit}
-
-                    [set_variables]
-                        name=this_item.specials.chance_to_hit
-                        to_variable=this_item.specials.original_chance_to_hit
-                    [/set_variables]
-
-                    {CLEAR_VARIABLE this_item.specials.original_chance_to_hit}
-                [/do]
-            [/foreach]
-
-            [unstore_unit]
-                variable=unit
-                find_vacant=no
-            [/unstore_unit]
+            [remove_object]
+                id=$unit.id
+                object_id=forced_cth
+            [/remove_object]
         [/event]
     [/event]
 
@@ -631,49 +596,29 @@
             [/and]
         [/filter_condition]
 
-        [foreach]
-            array=second_unit.attack
-            [do]
-                [if]
-                    [variable]
-                        name=this_item.specials.length
-                        greater_than=0
-                    [/variable]
-
-                    [variable]
-                        name=this_item.specials.chance_to_hit.length
-                        greater_than=0
-                    [/variable]
-
-                    [then]
-                        [set_variables]
-                            name=this_item.specials.original_chance_to_hit
-                            to_variable=this_item.specials.chance_to_hit
-                        [/set_variables]
-
-                        {CLEAR_VARIABLE this_item.specials.chance_to_hit}
-                    [/then]
-                [/if]
-
-                [set_variables]
-                    name=this_item.specials.chance_to_hit
-
-                    [value]
-                        id=forced_cth
+        [object]
+			id=forced_cth
+			[filter]
+				{FILTER}
+			[/filter]
+			silent=yes
+			duration=turn end
+			take_only_once=no
+			[effect]
+				apply_to=new_ability
+				[abilities]
+					[chance_to_hit]
+						id=forced_cth
                         value={CTH_NUMBER}
                         cumulative=no
-                        [filter_opponent]
-                            {SECOND_FILTER}
-                        [/filter_opponent]
-                    [/value]
-                [/set_variables]
-            [/do]
-        [/foreach]
-
-        [unstore_unit]
-            variable=second_unit
-            find_vacant=no
-        [/unstore_unit]
+						affect_self=yes
+						[filter_opponent]
+							{SECOND_FILTER}
+						[/filter_opponent]
+					[/chance_to_hit]
+				[/abilities]
+			[/effect]
+	   [/object]
 
         [event]
             name=attack end
@@ -685,24 +630,10 @@
                 [/have_unit]
             [/filter_condition]
 
-            [foreach]
-                array=second_unit.attack
-                [do]
-                    {CLEAR_VARIABLE this_item.specials.chance_to_hit}
-
-                    [set_variables]
-                        name=this_item.specials.chance_to_hit
-                        to_variable=this_item.specials.original_chance_to_hit
-                    [/set_variables]
-
-                    {CLEAR_VARIABLE this_item.specials.original_chance_to_hit}
-                [/do]
-            [/foreach]
-
-            [unstore_unit]
-                variable=second_unit
-                find_vacant=no
-            [/unstore_unit]
+             [remove_object]
+                id=$second_unit.id
+                object_id=forced_cth
+            [/remove_object]
         [/event]
     [/event]
 #enddef
