--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -636,6 +636,29 @@
             [/remove_object]
         [/event]
     [/event]
+    [event]
+    name=unit placed
+    delayed_variable_substitution=yes
+    [filter]
+        ability=forced_cth
+    [/filter]
+    
+    [remove_object]
+        object_id=forced_cth
+    [/remove_object]
+    [/event]
+    [event]
+    name=prestart,start,victory
+    delayed_variable_substitution=yes
+    [filter_condition]
+	[have_unit]
+	ability=forced_cth
+	[/have_unit]
+    [/filter_condition]
+    [remove_object]
+	object_id=forced_cth
+    [/remove_object]
+    [/event]
 #enddef
 
 #define LOOT AMOUNT SIDE
