--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -534,29 +534,31 @@
             [/and]
         [/filter_condition]
 
-        [object]
+        [modify_unit]
 		id=forced_cth
 		[filter]
 			{FILTER}
 		[/filter]
+		[object]
 		silent=yes
 		duration=turn end
 		take_only_once=no
 		[effect]
-			apply_to=new_ability
-			[abilities]
-				[chance_to_hit]
-					id=forced_cth
-					value={CTH_NUMBER}
-					cumulative=no
-					affect_self=yes
-					[filter_opponent]
-						{SECOND_FILTER}
-					[/filter_opponent]
-				[/chance_to_hit]
-			[/abilities]
+		    apply_to=new_ability
+		    [abilities]
+			[chance_to_hit]
+			    id=forced_cth
+			    value={CTH_NUMBER}
+			    cumulative=no
+			    affect_self=yes
+			    [filter_opponent]
+			        {SECOND_FILTER}
+			    [/filter_opponent]
+			[/chance_to_hit]
+		    [/abilities]
 		[/effect]
-	   [/object]
+		[/object]
+	   [/modify_unit]
 
         [event]
             name=attack end
@@ -596,29 +598,31 @@
             [/and]
         [/filter_condition]
 
-        [object]
+        [modify_unit]
 		id=forced_cth
 		[filter]
 			{FILTER}
 		[/filter]
+		[object]
 		silent=yes
 		duration=turn end
 		take_only_once=no
 		[effect]
-			apply_to=new_ability
-			[abilities]
-				[chance_to_hit]
-					id=forced_cth
-					value={CTH_NUMBER}
-					cumulative=no
-					affect_self=yes
-					[filter_opponent]
-						{SECOND_FILTER}
-					[/filter_opponent]
-				[/chance_to_hit]
-			[/abilities]
+		    apply_to=new_ability
+		    [abilities]
+			[chance_to_hit]
+			    id=forced_cth
+			    value={CTH_NUMBER}
+			    cumulative=no
+			    affect_self=yes
+			    [filter_opponent]
+			        {SECOND_FILTER}
+			    [/filter_opponent]
+			[/chance_to_hit]
+		    [/abilities]
 		[/effect]
-	   [/object]
+		[/object]
+	   [/modify_unit]
 
         [event]
             name=attack end
