--- a/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
@@ -545,6 +545,8 @@
         {VARIABLE EthilielV.x recall}
         {VARIABLE EthilielV.y recall}
         {CLEAR_VARIABLE EthilielV.modifications}
+        {CLEAR_VARIABLE EthilielV.upkeep}
+        
         [set_variables]
             name=EthilielV.modifications
             mode=insert
