TSG S3: fixed Ethiliel upkeep bug

--- a/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
@@ -546,6 +546,8 @@
         {VARIABLE EthilielV.x recall}
         {VARIABLE EthilielV.y recall}
         {CLEAR_VARIABLE EthilielV.modifications}
+        {CLEAR_VARIABLE EthilielV.upkeep}
+        
         [set_variables]
             name=EthilielV.modifications
             mode=insert
