--- a/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg
@@ -721,7 +721,7 @@
 
                             [message]
                                 speaker=Mal Keshar
-                                message= _ "Defend me my minions! Get the book! Aaargh!"
+                                message= _ "Defend me, my minions! Get the book! Aaargh!"
                             [/message]
 
                             [message]
