Themes: Fix unit status icons not showing
When [unit_status] shows two or more images, only the first showed and
there was no indication that there were further statuses. Now an
ellipsis is shown and the tooltip contains the information about the
second and further statuses.

Fixes #3197

--- a/data/themes/default.cfg
+++ b/data/themes/default.cfg
@@ -272,7 +272,7 @@
                 id=unit-status
                 font_size={DEFAULT_FONT_SMALL}
                 ref=label-hp
-                rect="+10,=-4,1022,+16"
+                rect="+0,=-4,+32,+16"
                 xanchor=right
                 yanchor=fixed
             [/unit_status]
