TSG S9a: fixed no unit spawn bug

--- a/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
@@ -304,7 +304,7 @@
         {LOYAL_UNIT 2 (Elvish Hero)    9 9}
         {LOYAL_UNIT 2 (Elvish Scout)  2 8}
 #endif
-#ifdef MEDIUM
+#ifdef NORMAL
         {LOYAL_UNIT 2 (Elvish Fighter) 9 8}
         {LOYAL_UNIT 2 (Elvish Captain) 7 12}
         {LOYAL_UNIT 2 (Elvish Archer)  8 9}
