--- a/data/core/units/monsters/Giant_Scorpling.cfg
+++ b/data/core/units/monsters/Giant_Scorpling.cfg
@@ -4,7 +4,7 @@
     name= _ "Giant Scorpling"
     race=monster
     image="units/monsters/scorpion/scorpling.png"
-    small_profile="portraits/monsters/scorpion.png~FL()"
+    small_profile="portraits/monsters/scorpion.png~FL()~CROP(0,82,400,318)"
     profile="portraits/monsters/scorpion.png~RIGHT()"
     hitpoints=24
     movement_type=scuttlefoot
