--- a/data/core/units/monsters/Giant_Spider.cfg
+++ b/data/core/units/monsters/Giant_Spider.cfg
@@ -5,6 +5,7 @@
     race=monster
     image="units/monsters/spider.png"
     profile="portraits/monsters/giant-spider.png"
+    small_profile="portraits/monsters/giant-spider.png~CROP(0,58,400,342)"
     hitpoints=54
     movement_type=mountainfoot
     [movement_costs]
