--- a/data/core/units/undead/Corpse_Soulless.cfg
+++ b/data/core/units/undead/Corpse_Soulless.cfg
@@ -114,6 +114,7 @@
         variation_name= _ "wc_variation^Dwarf"
         inherit=yes
         profile=portraits/undead/zombie-dwarf.png
+        small_profile=portraits/undead/zombie-dwarf.png~CROP(0,81,400,319)
         {UNIT_BODY_SOULLESS_STATS    dwarvishfoot 3 33}
         {UNIT_BODY_SOULLESS_GRAPHICS soulless-dwarf}
         [movement_costs]
@@ -126,6 +127,7 @@
         variation_name= _ "wc_variation^Goblin"
         inherit=yes
         profile=portraits/undead/zombie-goblin.png
+        small_profile=portraits/undead/zombie-goblin.png~CROP(0,81,400,319)
         {UNIT_BODY_SOULLESS_STATS    smallfoot 4 23}
         {UNIT_BODY_SOULLESS_GRAPHICS soulless-goblin}
     [/variation]
@@ -161,6 +163,7 @@
         variation_name= _ "wc_variation^Saurian"
         inherit=yes
         profile=portraits/undead/zombie-saurian.png
+        small_profile=portraits/undead/zombie-saurian.png~CROP(0,61,400,300)
         {UNIT_BODY_SOULLESS_STATS    lizard 4 25}
         {UNIT_BODY_SOULLESS_GRAPHICS soulless-saurian}
     [/variation]
@@ -170,6 +173,7 @@
         variation_name= _ "wc_variation^Swimmer"
         inherit=yes
         profile=portraits/undead/zombie-swimmer.png
+        small_profile=portraits/undead/zombie-swimmer.png~CROP(0,81,400,319)
         {UNIT_BODY_SOULLESS_STATS    swimmer 4 28}
         {UNIT_BODY_SOULLESS_GRAPHICS soulless-swimmer}
         [movement_costs]
@@ -208,6 +212,7 @@
         variation_name= _ "wc_variation^Wolf"
         inherit=yes
         profile=portraits/undead/zombie-wolf.png
+        small_profile=portraits/undead/zombie-wolf.png~CROP(0,81,400,319)
         {UNIT_BODY_SOULLESS_STATS orcishfoot 5 30}
         {UNIT_BODY_SOULLESS_GRAPHICS soulless-wolf}
         [defense]
@@ -220,6 +225,7 @@
         variation_name= _ "wc_variation^Bat"
         inherit=yes
         profile=portraits/undead/zombie-bat.png
+        small_profile=portraits/undead/zombie-bat.png~CROP(0,0,400,300)
         {UNIT_BODY_SOULLESS_STATS fly 5 24}
         image="units/undead/soulless-bat-se-3.png"
         die_sound="bat-flapping.wav"
