--- a/data/core/units/monsters/Giant_Mudcrawler.cfg
+++ b/data/core/units/monsters/Giant_Mudcrawler.cfg
@@ -6,6 +6,7 @@
     {TRAIT_ELEMENTAL}
     image="units/monsters/giant-mudcrawler.png"
     profile="portraits/monsters/giant-mudcrawler.png"
+    small_profile="portraits/monsters/giant-mudcrawler.png~CROP(0,63,400,337)"
     hitpoints=36
     movement_type=scuttlefoot
     movement=4
