--- a/data/core/units/monsters/Giant_Scorpion.cfg
+++ b/data/core/units/monsters/Giant_Scorpion.cfg
@@ -4,7 +4,7 @@
     name= _ "Giant Scorpion"
     race=monster
     image="units/monsters/scorpion/scorpion.png"
-    small_profile="portraits/monsters/scorpion.png~FL()"
+    small_profile="portraits/monsters/scorpion.png~FL()~CROP(0,82,400,318)"
     profile="portraits/monsters/scorpion.png~RIGHT()"
     [standing_anim]
         start_time=0
