Help: cut portraits of monsters, bats and zombies
This will less often wrap the text of the descriptions.

For many of the zombies is more possible, but it has been taken care to have the
linebreak for 'required xp' and in the variation list the same on all their pages.

The reason for the 319px height on some of them is:
- It's still taking enough space to have 'required xp' on a new line.
- It does for both the WC and Soulless not interfere with the description text.
- The swimmer can't be smaller than 319px without cutting any non-tranaparent
  pixel. To have more structure the goblin/dwarf/dog use the same.

[ci skip]

--- a/data/core/units/undead/Corpse_Walking.cfg
+++ b/data/core/units/undead/Corpse_Walking.cfg
@@ -113,6 +113,7 @@
         variation_name= _ "wc_variation^Dwarf"
         inherit=yes
         profile=portraits/undead/zombie-dwarf.png
+        small_profile=portraits/undead/zombie-dwarf.png~CROP(0,81,400,319)
         {UNIT_BODY_WALKING_CORPSE_STATS    dwarvishfoot 3 21}
         {UNIT_BODY_WALKING_CORPSE_GRAPHICS zombie-dwarf}
         [movement_costs]
@@ -125,6 +126,7 @@
         variation_name= _ "wc_variation^Goblin"
         inherit=yes
         profile=portraits/undead/zombie-goblin.png
+        small_profile=portraits/undead/zombie-goblin.png~CROP(0,81,400,319)
         {UNIT_BODY_WALKING_CORPSE_STATS    smallfoot 4 13}
         {UNIT_BODY_WALKING_CORPSE_GRAPHICS zombie-goblin}
     [/variation]
@@ -160,6 +162,7 @@
         variation_name= _ "wc_variation^Saurian"
         inherit=yes
         profile=portraits/undead/zombie-saurian.png
+        small_profile=portraits/undead/zombie-saurian.png~CROP(0,61,400,300)
         {UNIT_BODY_WALKING_CORPSE_STATS    lizard 4 16}
         {UNIT_BODY_WALKING_CORPSE_GRAPHICS zombie-saurian}
     [/variation]
@@ -169,6 +172,7 @@
         variation_name= _ "wc_variation^Swimmer"
         inherit=yes
         profile=portraits/undead/zombie-swimmer.png
+        small_profile=portraits/undead/zombie-swimmer.png~CROP(0,81,400,319)
         {UNIT_BODY_WALKING_CORPSE_STATS    swimmer 4 18}
         {UNIT_BODY_WALKING_CORPSE_GRAPHICS zombie-swimmer}
         [movement_costs]
@@ -207,6 +211,7 @@
         variation_name= _ "wc_variation^Wolf"
         inherit=yes
         profile=portraits/undead/zombie-wolf.png
+        small_profile=portraits/undead/zombie-wolf.png~CROP(0,81,400,319)
         {UNIT_BODY_WALKING_CORPSE_STATS orcishfoot 5 19}
         {UNIT_BODY_WALKING_CORPSE_GRAPHICS zombie-wolf}
         [defense]
@@ -219,6 +224,7 @@
         variation_name= _ "wc_variation^Bat"
         inherit=yes
         profile=portraits/undead/zombie-bat.png
+        small_profile=portraits/undead/zombie-bat.png~CROP(0,0,400,300)
         {UNIT_BODY_WALKING_CORPSE_STATS fly 5 15}
         image="units/undead/zombie-bat-se-3.png"
         die_sound="bat-flapping.wav"
