fixup – remove typo
[ci skip]

--- a/data/core/units/undead/Corpse_Walking.cfg
+++ b/data/core/units/undead/Corpse_Walking.cfg
@@ -158,7 +158,7 @@
     [/variation]
 
     [variation]
-        variation_id=saurianl
+        variation_id=saurian
         variation_name= _ "wc_variation^Saurian"
         inherit=yes
         profile=portraits/undead/zombie-saurian.png
