Deprecate EXPERIMENTAL_AI macro

--- a/data/core/macros/ai.cfg
+++ b/data/core/macros/ai.cfg
@@ -532,6 +532,7 @@
 ############################################################
 
 #define EXPERIMENTAL_AI
+    #deprecated 2 1.15 Use ai_algorithm=experimental_ai in the [ai] tag instead
     # Experimental AI with alternative recruitment, castle switching, alternative retreating,
     # village grabbing, poison spreading, healer placement, village hunting and
     # move-to-enemy candidate actions.
