Unit tests: change attack_depth to leader_value for aspect tests
attack_depth has been removed

--- a/data/test/scenarios/ai/modify/aspects.cfg
+++ b/data/test/scenarios/ai/modify/aspects.cfg
@@ -1,38 +1,38 @@
 
-{AI_ASPECT_UNIT_TEST test_modify_ai_delete_facet attack_depth
-{SPLIT 7,7,7,7,7,7,5,5,5,5,5,5 ,}
+{AI_ASPECT_UNIT_TEST test_modify_ai_delete_facet leader_value
+{SPLIT 7,7,7,7,7,7,3,3,3,3,3,3 ,}
 (
     [ai]
-        [attack_depth]
-            id=custom_depth
+        [leader_value]
+            id=custom_value
             value=7
-        [/attack_depth]
+        [/leader_value]
     [/ai]
 ) (
     [event]
         name=turn 6 end
         [modify_ai]
             action=delete
-            path=aspect[attack_depth].facet[custom_depth]
+            path=aspect[leader_value].facet[custom_value]
         [/modify_ai]
     [/event]
 )}
 
-{AI_ASPECT_UNIT_TEST test_modify_ai_change_facet attack_depth
+{AI_ASPECT_UNIT_TEST test_modify_ai_change_facet leader_value
 {SPLIT 7,7,7,7,7,7,8,8,8,8,8,8 ,}
 (
     [ai]
-        [attack_depth]
-            id=custom_depth
+        [leader_value]
+            id=custom_value
             value=7
-        [/attack_depth]
+        [/leader_value]
     [/ai]
 ) (
     [event]
         name=turn 6 end
         [modify_ai]
             action=change
-            path=aspect[attack_depth].facet[custom_depth]
+            path=aspect[leader_value].facet[custom_value]
             [facet]
                 value=8
             [/facet]
@@ -40,23 +40,23 @@
     [/event]
 )}
 
-{AI_ASPECT_UNIT_TEST test_modify_ai_replace_facet attack_depth
-{SPLIT 7,7,7,7,8,8,8,8,5,5,5,5 ,}
+{AI_ASPECT_UNIT_TEST test_modify_ai_replace_facet leader_value
+{SPLIT 7,7,7,7,8,8,8,8,3,3,3,3 ,}
 (
     [ai]
-        [attack_depth]
-            id=custom_depth
+        [leader_value]
+            id=custom_value
             value=7
-        [/attack_depth]
+        [/leader_value]
     [/ai]
 ) (
     [event]
         name=turn 4 end
         [modify_ai]
             action=add
-            path=aspect[attack_depth].facet[]
+            path=aspect[leader_value].facet[]
             [facet]
-                id=custom_depth
+                id=custom_value
                 value=8
             [/facet]
         [/modify_ai]
@@ -65,28 +65,28 @@
         name=turn 8 end
         [modify_ai]
             action=delete
-            path=aspect[attack_depth].facet[custom_depth]
+            path=aspect[leader_value].facet[custom_value]
         [/modify_ai]
     [/event]
 )}
 
-{AI_ASPECT_UNIT_TEST test_modify_ai_add_facet attack_depth
+{AI_ASPECT_UNIT_TEST test_modify_ai_add_facet leader_value
 {SPLIT 7,7,7,7,8,8,8,8,7,7,7,7 ,}
 (
     [ai]
-        [attack_depth]
-            id=custom_depth
+        [leader_value]
+            id=custom_value
             value=7
-        [/attack_depth]
+        [/leader_value]
     [/ai]
 ) (
     [event]
         name=turn 4 end
         [modify_ai]
             action=add
-            path=aspect[attack_depth].facet[]
+            path=aspect[leader_value].facet[]
             [facet]
-                id=custom_depth2
+                id=custom_value2
                 value=8
             [/facet]
         [/modify_ai]
@@ -95,27 +95,27 @@
         name=turn 8 end
         [modify_ai]
             action=delete
-            path=aspect[attack_depth].facet[custom_depth2]
+            path=aspect[leader_value].facet[custom_value2]
         [/modify_ai]
     [/event]
 )}
 
-{AI_ASPECT_UNIT_TEST test_modify_ai_change_default_facet attack_depth
-{SPLIT 5,5,5,5,7,7,7,7,8,8,8,8 ,}
+{AI_ASPECT_UNIT_TEST test_modify_ai_change_default_facet leader_value
+{SPLIT 3,3,3,3,7,7,7,7,8,8,8,8 ,}
 (
     [ai]
-        [attack_depth]
+        [leader_value]
             turns=5-8
-            id=custom_depth
+            id=custom_value
             value=7
-        [/attack_depth]
+        [/leader_value]
     [/ai]
 ) (
     [event]
         name=turn 6 end
         [modify_ai]
             action=change
-            path=aspect[attack_depth].facet[default_facet]
+            path=aspect[leader_value].facet[default_facet]
             [facet]
                 value=8
             [/facet]
@@ -123,23 +123,23 @@
     [/event]
 )}
 
-{AI_ASPECT_UNIT_TEST test_modify_ai_nested_facets attack_depth
-{SPLIT 5,7,7,14,14,14,12,7,7,14,14,5 ,}
+{AI_ASPECT_UNIT_TEST test_modify_ai_nested_facets leader_value
+{SPLIT 3,7,7,14,14,14,12,7,7,14,14,3 ,}
 (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             [facet]
-                id=composite_depth
+                id=composite_value
                 name=composite_aspect
                 turns=2-11
                 [facet]
-                    id=night_depth
+                    id=night_value
                     time_of_day=dusk,first_watch,second_watch
                     value=14
                 [/facet]
                 [default]
-                    id=my_default_attack_depth
+                    id=my_default_leader_value
                     value=7
                 [/default]
             [/facet]
@@ -150,9 +150,9 @@
         name=turn 4 end
         [modify_ai]
             action=add
-            path=aspect[attack_depth].facet[composite_depth].facet[]
+            path=aspect[leader_value].facet[composite_value].facet[]
             [facet]
-                id=twilight_depth
+                id=twilight_value
                 time_of_day=dawn,dusk
                 value=12
             [/facet]
@@ -162,17 +162,17 @@
         name=turn 8 end
         [modify_ai]
             action=delete
-            path=aspect[attack_depth].facet[composite_depth].facet[twilight_depth]
+            path=aspect[leader_value].facet[composite_value].facet[twilight_value]
         [/modify_ai]
     [/event]
 )}
 
-{AI_ASPECT_UNIT_TEST test_modify_ai_composite_default_facets attack_depth
-{SPLIT 10,5,5,5,5,5,5,5,12,12,12,12 ,}
+{AI_ASPECT_UNIT_TEST test_modify_ai_composite_default_facets leader_value
+{SPLIT 10,3,3,3,3,3,3,3,12,12,12,12 ,}
 (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             [default]
                 name=composite_aspect
                 [facet]
@@ -181,7 +181,7 @@
                     value=10
                 [/facet]
                 [default]
-                    value=5
+                    value=3
                 [/default]
             [/default]
         [/aspect]
@@ -191,14 +191,14 @@
         name=turn 4 end
         [modify_ai]
             action=delete
-            path=aspect[attack_depth].facet[default_facet].facet[dawn_default]
+            path=aspect[leader_value].facet[default_facet].facet[dawn_default]
         [/modify_ai]
     [/event]
     [event]
         name=turn 8 end
         [modify_ai]
             action=add
-            path=aspect[attack_depth].facet[default_facet].facet[]
+            path=aspect[leader_value].facet[default_facet].facet[]
             [facet]
                 value=12
             [/facet]
@@ -206,14 +206,14 @@
     [/event]
 )}
 
-{AI_ASPECT_UNIT_TEST test_modify_ai_change_aspect attack_depth
-{SPLIT 5,5,5,5,5,5,3,4,4,5,5,6 ,}
+{AI_ASPECT_UNIT_TEST test_modify_ai_change_aspect leader_value
+{SPLIT 3,3,3,3,3,3,3,4,4,5,5,6 ,}
 () (
     [event]
         name=turn 6 end
         [modify_ai]
             action=change
-            path=aspect[attack_depth]
+            path=aspect[leader_value]
             [aspect]
                 engine=lua
                 code=<<return math.floor(wesnoth.current.turn / 2)>>
