--- a/data/test/scenarios/ai/config/simple_aspect.cfg
+++ b/data/test/scenarios/ai/config/simple_aspect.cfg
@@ -1,48 +1,48 @@
 
-{AI_ASPECT_UNIT_TEST test_basic_simplified_aspect attack_depth
-{SPLIT 3,5,5,3,7,7,5,3,5,5,7,7 ,}
+{AI_ASPECT_UNIT_TEST test_basic_simplified_aspect leader_value
+{SPLIT 9,3,3,9,7,7,3,9,3,3,7,7 ,}
 (
     [ai]
         time_of_day=first_watch,second_watch
-        attack_depth=7
+        leader_value=7
     [/ai]
     [ai]
         turns=1,4,8
-        attack_depth=3
+        leader_value=9
     [/ai]
 ) ()}
 
-{AI_ASPECT_UNIT_TEST test_basic_abbreviated_aspect attack_depth
-{SPLIT 7,7,7,7,7,7,5,5,5,5,9,9 ,}
+{AI_ASPECT_UNIT_TEST test_basic_abbreviated_aspect leader_value
+{SPLIT 7,7,7,7,7,7,3,3,3,3,9,9 ,}
 (
     [ai]
         time_of_day=first_watch,second_watch
-        attack_depth=9
-        [attack_depth]
+        leader_value=9
+        [leader_value]
             turns=1-6
             value=7
-        [/attack_depth]
+        [/leader_value]
     [/ai]
 ) ()}
 
-{AI_ASPECT_UNIT_TEST test_basic_standard_aspect attack_depth
+{AI_ASPECT_UNIT_TEST test_basic_standard_aspect leader_value
 {SPLIT 7,7,7,7,7,7,7,7,7,7,7,7 ,
 } (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             name=standard_aspect
             value=7
         [/aspect]
     [/ai]
 ) ()}
 
-{AI_ASPECT_UNIT_TEST test_basic_composite_aspect attack_depth
-{SPLIT 5,5,14,14,14,14,5,5,5,5,12,12 ,}
+{AI_ASPECT_UNIT_TEST test_basic_composite_aspect leader_value
+{SPLIT 3,3,14,14,14,14,3,3,3,3,12,12 ,}
 (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             [facet]
                 time_of_day=first_watch,second_watch
                 value=12
@@ -55,24 +55,24 @@
     [/ai]
 ) ()}
 
-{AI_ASPECT_UNIT_TEST test_basic_lua_aspect attack_depth
+{AI_ASPECT_UNIT_TEST test_basic_lua_aspect leader_value
 {SPLIT 2,4,6,8,10,12,14,16,18,20,22,24 ,}
 (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             engine=lua
             code=<<return wesnoth.current.turn * 2>>
         [/aspect]
     [/ai]
 ) ()}
 
-{AI_ASPECT_UNIT_TEST test_basic_composite_facet attack_depth
-{SPLIT 5,5,5,5,5,5,7,7,7,14,14,14 ,}
+{AI_ASPECT_UNIT_TEST test_basic_composite_facet leader_value
+{SPLIT 3,3,3,3,3,3,7,7,7,14,14,14 ,}
 (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             [facet]
                 name=composite_aspect
                 turns=7-12
@@ -88,12 +88,12 @@
     [/ai]
 ) ()}
 
-{AI_ASPECT_UNIT_TEST test_basic_lua_facet attack_depth
+{AI_ASPECT_UNIT_TEST test_basic_lua_facet leader_value
 {SPLIT 2,7,7,2,7,7,14,7,7,5,7,7 ,}
 (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             [facet]
                 engine=lua
                 time_of_day=dusk
@@ -111,33 +111,33 @@
     [/ai]
 ) ()}
 
-{AI_ASPECT_UNIT_TEST test_basic_composite_default_facet attack_depth
-{SPLIT 10,5,5,5,5,5,10,5,5,5,5,5 ,}
+{AI_ASPECT_UNIT_TEST test_basic_composite_default_facet leader_value
+{SPLIT 10,3,3,3,3,3,10,3,3,3,3,3 ,}
 (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             [default]
                 name=composite_aspect
                 [facet]
-                    id=my_composite_default_attack_depth
+                    id=my_composite_default_leader_value
                     time_of_day=dawn
                     value=10
                 [/facet]
                 [default]
-                    value=5
+                    value=3
                 [/default]
             [/default]
         [/aspect]
     [/ai]
 ) ()}
 
-{AI_ASPECT_UNIT_TEST test_basic_lua_default_facet attack_depth
+{AI_ASPECT_UNIT_TEST test_basic_lua_default_facet leader_value
 {SPLIT 1,2,3,4,5,6,7,8,9,10,11,12 ,}
 (
     [ai]
         [aspect]
-            id=attack_depth
+            id=leader_value
             [default]
                 engine=lua
                 code=<<return wesnoth.current.turn>>
