Schema validation: remove attack_depth aspect
It's been removed from the AI.

--- a/data/schema/ai/aspect_complex.cfg
+++ b/data/schema/ai/aspect_complex.cfg
@@ -68,7 +68,7 @@
 			super="{BASE}~bool"
 		[/case]
 		[case]
-			value=villages_per_scout,attack_depth,recruitment_randomness
+			value=villages_per_scout,recruitment_randomness
 			super="{BASE}~int"
 		[/case]
 		[case]
