AI: deprecate ai_depth related macros

--- a/data/core/macros/ai.cfg
+++ b/data/core/macros/ai.cfg
@@ -375,19 +375,7 @@
 #enddef
 
 #define AI_SCALE_ATTACK_DEPTH_BY_DIFFICULTY
-    # change attack depth depending on difficulty
-#ifdef EASY
-    {AI_SIMPLE_ALWAYS_ASPECT attack_depth 3}
-#endif
-
-#ifdef NORMAL
-    {AI_SIMPLE_ALWAYS_ASPECT attack_depth 4}
-#endif
-
-#ifdef HARD
-    {AI_SIMPLE_ALWAYS_ASPECT attack_depth 5}
-#endif
-
+    #deprecated 3 1.17 The attack_depth aspect has no effect on the AI any more.
 #enddef
 
 ############################################################
