--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -122,14 +122,11 @@
 #enddef
 
 #define ATTACK_DEPTH EASY_VALUE NORMAL_VALUE HARD_VALUE
-    # Macro to define AI attack depth for different difficulty levels
-    # (set it to 1-6)
-    {QUANTITY attack_depth {EASY_VALUE} {NORMAL_VALUE} {HARD_VALUE}}
+    #deprecated 3 1.17 The attack_depth aspect has no effect on the AI any more.
 #enddef
 
 #define ATTACK_DEPTH4 EASY_VALUE NORMAL_VALUE HARD_VALUE NIGHTMARE_VALUE
-    # Four-difficulty version of ATTACK_DEPTH
-    {QUANTITY4 attack_depth {EASY_VALUE} {NORMAL_VALUE} {HARD_VALUE} {NIGHTMARE_VALUE}}
+    #deprecated 3 1.17 The attack_depth aspect has no effect on the AI any more.
 #enddef
 
 #define NO_SCOUTS
