--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -543,15 +543,14 @@
 	    duration=turn end
 	    take_only_once=no
 	    [effect]
-	        apply_to=new_ability
-		[abilities]
+	    apply_to=new_ability
+	        [abilities] 
 		    [chance_to_hit]
 		        id=forced_cth
-			value={CTH_NUMBER}
 			cumulative=no
 			affect_self=yes
 			[filter_opponent]
-		            {SECOND_FILTER}
+			    {SECOND_FILTER}
 			[/filter_opponent]
 		    [/chance_to_hit]
 		[/abilities]
@@ -589,21 +588,20 @@
         [object]
 	    id=forced_cth
 	    [filter]
-	        id=$unit.id
+	        id=$second_unit.id
 	    [/filter]
 	    silent=yes
 	    duration=turn end
 	    take_only_once=no
 	    [effect]
-	        apply_to=new_ability
-		[abilities]
+	    apply_to=new_ability
+	        [abilities] 
 		    [chance_to_hit]
 		        id=forced_cth
-			value={CTH_NUMBER}
 			cumulative=no
 			affect_self=yes
 			[filter_opponent]
-		            {SECOND_FILTER}
+			    {SECOND_FILTER}
 			[/filter_opponent]
 		    [/chance_to_hit]
 		[/abilities]
@@ -616,8 +614,10 @@
 	    [/remove_object]
         [/event]
     [/event]
+    [/event]
     [event]
         name=unit placed
+	first_time_only=no
 
         [filter]
             ability=forced_cth
@@ -629,15 +629,15 @@
     [/event]
     [event]
         name=prestart,start,victory
-
-	[filter_condition]
-	    [have_unit]
-		ability=forced_cth
+        [filter_condition]
+            [have_unit]
+	        ability=forced_cth
 	    [/have_unit]
-	[/filter_condition]
+        [/filter_condition]
+	
 	[remove_object]
-	    object_id=forced_cth
-	[/remove_object]
+            object_id=forced_cth
+        [/remove_object]
     [/event]
 #enddef
 
