--- a/data/scenario-test.cfg
+++ b/data/scenario-test.cfg
@@ -4063,6 +4063,38 @@ unplagueable: $wml_unit.status.unplagueable"
         {CLEAR_VARIABLE x_len}
         {CLEAR_VARIABLE xy_len}
     [/event]
+	{FORCE_CHANCE_TO_HIT (type=Elvish Champion) (type=Lich) 80 ()}
+	{FORCE_CHANCE_TO_HIT (type=Elvish Champion) (type=Elvish Marksman) 90 ()}
+	[event]
+        name=attack
+        first_time_only=yes
+
+        [filter]
+            type=Elvish Champion
+        [/filter]
+
+        [filter_second]
+           type=Lich
+        [/filter_second]
+		
+		[store_unit]
+            [filter]
+               id=$unit.id
+               side=1
+            [/filter]
+            variable=store_cth
+            kill=yes
+            mode=replace
+        [/store_unit]
+	[/event]
+	[event]
+        name=turn 2
+		[unstore_unit]
+            variable=store_cth
+            find_vacant=no
+            advance=false
+        [/unstore_unit]
+	[/event]
 [/test]
 
 [units]
