AI: move default algorithm definition from C++ to WML
Among other things this now allows defining cores that have a different default AI.

--- a/data/_main.cfg
+++ b/data/_main.cfg
@@ -38,6 +38,7 @@
 {campaigns/}
 
 [ais]
+    default_ai_algorithm=ai_default_rca
     [default_config]
         {ai/utils/default_config.cfg}
     [/default_config]
