Default theme: Make alignment and abilities wider.

--- a/data/themes/default.cfg
+++ b/data/themes/default.cfg
@@ -414,7 +414,7 @@
                 ref=unit-type
                 id=unit-alignment
                 font_size={DEFAULT_FONT_SMALL}
-                rect="=,+0,=,+18"
+                rect="=,+0,=+50,+18"
                 xanchor=right
                 yanchor=fixed
             [/unit_alignment]
