AI configuration: new optional parameter mp_rank=
This parameter determines in which order the available AIs are shown in the MP computer player selection menu. This can be used for eras, modifications or cores to change which AI is first in the list.

--- a/data/ai/ais/ai_generic_rush.cfg
+++ b/data/ai/ais/ai_generic_rush.cfg
@@ -8,5 +8,6 @@
 [ai]
     id=experimental_ai
     description=_"Multiplayer_AI^Experimental AI" # wmllint: no spellcheck
+    mp_rank=1000
     {EXPERIMENTAL_AI}
 [/ai]
