--- a/data/ai/dev/formula_ai_poisoning.cfg
+++ b/data/ai/dev/formula_ai_poisoning.cfg
@@ -7,6 +7,7 @@
 [ai]
     id=formula_ai_poisoning
     description=_"Multiplayer_AI^Dev AI: Default + Poisoning (Formula AI)" # wmllint: no spellcheck
+    mp_rank=100
     [stage]
         id=main_loop
         name=ai_default_rca::candidate_action_evaluation_loop
