--- a/data/ai/dev/ai_default_rca_alternate_recruiting.cfg
+++ b/data/ai/dev/ai_default_rca_alternate_recruiting.cfg
@@ -8,6 +8,7 @@
 [ai]
     id=ai_default_rca_alternate_recruiting
     description=_"Multiplayer_AI^Dev AI: Default AI (RCA) with Alternate Recruiting" # wmllint: no spellcheck
+    mp_rank=100
     # RCA := Register Candidate Action; more info at http://forums.wesnoth.org/viewtopic.php?p=419625#p419625
     [stage]
         id=main_loop
