--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -1254,6 +1254,9 @@
         name = "Herb Pah (haiz)"
     [/entry]
     [entry]
+        name = "holius-fr"
+    [/entry]
+    [entry]
         name = "iKevinY"
     [/entry]
     [entry]
