--- a/data/schema/core/config.cfg
+++ b/data/schema/core/config.cfg
@@ -85,6 +85,8 @@
 		{SIMPLE_KEY level string}
 		{SIMPLE_KEY ellipsis string}
 		{SIMPLE_KEY missing string}
+		{SIMPLE_KEY battery_icon string}
+		{SIMPLE_KEY time_icon string}
 	[/tag]
 	[tag]
 		name="sounds"
