Help: Delete superfluous linebreaks.

--- a/data/core/terrain.cfg
+++ b/data/core/terrain.cfg
@@ -2720,8 +2720,7 @@ For those who go by land or sea, a bridge is the best of both worlds — for gam
     editor_name= _ "Fungus"
     string=Uft
     hidden=yes
-    help_topic_text= _ "<italic>text='Mushroom groves'</italic> are vast underground forests of giant mushrooms,
-which thrive in the damp darkness. Most units have trouble negotiating the spongy floor of smaller fungi, but they have plenty of cover behind the larger stalks. Mounted units, however, become completely mired and lack proper freedom of movement in combat. Undead units have a natural affinity for decay and function quite well in mushroom forests.
+    help_topic_text= _ "<italic>text='Mushroom groves'</italic> are vast underground forests of giant mushrooms, which thrive in the damp darkness. Most units have trouble negotiating the spongy floor of smaller fungi, but they have plenty of cover behind the larger stalks. Mounted units, however, become completely mired and lack proper freedom of movement in combat. Undead units have a natural affinity for decay and function quite well in mushroom forests.
 
 Most units receive 50% to 60% defense in mushroom groves, whereas cavalry receive only 20%."
 [/terrain_type]
@@ -2776,8 +2775,7 @@ Merfolk and Naga both receive 70% defense on coastal reefs."
     editor_name= _ "Hills"
     string=Ht
     editor_group=rough
-    help_topic_text= _ "<italic>text='Hills'</italic> represent any reasonably rough terrain,
-with enough dips and rises in the ground to provide some cover. Hills are difficult for most troops to navigate. Dwarves, trolls, and orcs have enough familiarity with the terrain that they can pass through it without being slowed down. Cavalry have enough trouble navigating the terrain that any defensive aid lent by cover is negated.
+    help_topic_text= _ "<italic>text='Hills'</italic> represent any reasonably rough terrain, with enough dips and rises in the ground to provide some cover. Hills are difficult for most troops to navigate. Dwarves, trolls, and orcs have enough familiarity with the terrain that they can pass through it without being slowed down. Cavalry have enough trouble navigating the terrain that any defensive aid lent by cover is negated.
 
 Most units have about 50% defense in hills, whereas cavalry are limited to 40%. Dwarves enjoy 60% defense in hills."
     hidden=yes
